# workflow

./: .gitignore  CMakeLists.txt  GNUmakefile
drawio/: workflow.drawio
src/: CMakeLists.txt
src/client/include/: WFConsulClient.h  WFDnsClient.h  WFKafkaClient.h  WFMySQLConnection.h  WFRedisSubscriber.h
src/client/src/: CMakeLists.txt  WFDnsClient.cc  WFKafkaClient.cc  WFMySQLConnection.cc
src/factory/: WFTask.h
src/factory/include/: WFConnection.h  WFGraphTask.h  WFHttpServerTask.h  WFMessageQueue.h  WFResourcePool.h  WFTask.h  WFTaskError.h  WFTaskFactory.h
src/factory/src/: CMakeLists.txt  WFTaskFactory.cc
src/kernel/include/: Communicator.h  ExecRequest.h  Executor.h  SubTask.h  msgqueue.h  poller.h  rbtree.h  thrdpool.h
src/kernel/src/: CMakeLists.txt  Communicator.cc  SubTask.cc  msgqueue.c  poller.c  thrdpool.c
src/manager/src/: CMakeLists.txt
src/nameservice/src/: CMakeLists.txt
src/protocol/include/: HttpMessage.h  HttpUtil.h
src/protocol/src/: CMakeLists.txt  HttpUtil.cc
src/server/include/: WFDnsServer.h  WFHttpServer.h  WFRedisServer.h  WFServer.h
src/server/src/: CMakeLists.txt  WFMySQLServer.cc  WFServer.cc
src/util/include/: EncodeStream.h  LRUCache.h  StringUtil.h  URIParser.h  crc32c.h  json_parser.h
src/util/src/: CMakeLists.txt  StringUtil.cc
tutorial/: CMakeLists.txt  GNUmakefile  tutorial-00-helloworld.cc  tutorial-04-http_echo_server.cc
